--- a/css-styles.css
+++ b/css-styles.css
@@ -1,7 +1,8 @@
 body{
     background-color: antiquewhite;
     display: flex;
-    align-content: center;
+    flex-direction: column;
+    align-items: center;
     justify-content: center;
 }
 #container{
@@ -11,5 +12,12 @@ body{
     width: 1000px;
     height: 1000px;
     align-content: center;
+}
+button{
+    background-color:aqua;
+}
+
+.color-change{
+    background-color: black;
 }
 
